# ollama-utils

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  main.py  pyproject.toml  pytest.ini  test_local_package.py  test_script.py
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  model_management.py  streamlit_example.py
ollama_utils/: __init__.py  chat.py  models.py  streamlit_helpers.py
tests/: __init__.py  test_chat.py  test_models.py
